Make footer stick to the bottom of the page - Use JavaScript to determine height of `.page_footer` to apply padding to `body` avoiding any content overlap - Absolute position `.page_footer` to bottom of the page

--- a/assets/_scss/_base.scss
+++ b/assets/_scss/_base.scss
@@ -2,6 +2,12 @@
    BASE ELEMENTS
    ========================================================================== */
 
+html {
+  /* sticky footer fix */
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
